# ChangeLog for www-client/google-chrome-beta
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-beta/ChangeLog,v 1.38 2014/07/31 02:26:39 floppym Exp $

*google-chrome-beta-37.0.2062.58_p1 (31 Jul 2014)

  31 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-37.0.2062.58_p1.ebuild,
  -google-chrome-beta-37.0.2062.44_p1.ebuild:
  Automated update.

*google-chrome-beta-37.0.2062.44_p1 (25 Jul 2014)

  25 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-37.0.2062.44_p1.ebuild,
  -google-chrome-beta-37.0.2062.35_p1.ebuild:
  Automated update.

*google-chrome-beta-37.0.2062.35_p1 (24 Jul 2014)

  24 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-37.0.2062.35_p1.ebuild,
  -google-chrome-beta-37.0.2062.20_p1.ebuild:
  Automated update.

  18 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  google-chrome-beta-37.0.2062.20_p1.ebuild:
  Update deps.

*google-chrome-beta-37.0.2062.20_p1 (18 Jul 2014)

  18 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-37.0.2062.20_p1.ebuild,
  -google-chrome-beta-36.0.1985.125_p1.ebuild:
  Automated update.

*google-chrome-beta-36.0.1985.125_p1 (15 Jul 2014)

  15 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-36.0.1985.125_p1.ebuild,
  -google-chrome-beta-36.0.1985.103_p1.ebuild:
  Automated update.

*google-chrome-beta-36.0.1985.103_p1 (01 Jul 2014)

  01 Jul 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-36.0.1985.103_p1.ebuild,
  -google-chrome-beta-36.0.1985.97_p1.ebuild:
  Automated update.

*google-chrome-beta-36.0.1985.97_p1 (26 Jun 2014)

  26 Jun 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-36.0.1985.97_p1.ebuild,
  -google-chrome-beta-36.0.1985.84_p1.ebuild:
  Automated update.

*google-chrome-beta-36.0.1985.84_p1 (19 Jun 2014)

  19 Jun 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-beta-36.0.1985.84_p1.ebuild,