@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-beta_37.0.2062.58-1_amd64.deb 49390786 SHA256 d1f1ebde2baa2370a2f0c649398d99d16dce96a3c8bfd928bd51167b130aeb32 SHA512 8fa04d69aa09f935e8aa14a6ffd4ada8b88a81dff382a091245547d5a14fd0be0e9abd1e317e7bf9d4ab3ee4b5d05bcb7822178f87e5da4fc822f781f14ab210 WHIRLPOOL 63879c3ce69ab28fb9639a0efb62bf4017e33b9d10534d4f228d9b6b180f4ae21292651223072bbea86d88c74a572cf248f9868f0cc85ed28943a06f671c5376
-DIST google-chrome-beta_37.0.2062.58-1_i386.deb 49941168 SHA256 f32d89c431379131ea90652993146be2c41058bbc9bebc60dbcf188f17caa1b2 SHA512 0681dd66646695e0dca92a59c49d9773a4c306be62b98ad6f2b7f353eeaaf1584edf05324077c442657196e481a915cea600bd985f3668844f437551b7524beb WHIRLPOOL 3f2bd25a592da99106e91ee68531f49888e0df9eccd97e0fd5840410594a11afcf3dba204f2df928b26fe2e4de3691e5d651df257c88ead3edc329b2e4e0dbdc
-EBUILD google-chrome-beta-37.0.2062.58_p1.ebuild 4381 SHA256 f0cccf2d9b8f7e039bff6e14437f56a334becef51a753d7c7df9bccdb235c469 SHA512 b347e9aadcdb0ff151b592bd1e9758176b5e2a9b2d9195df42db9c355f0df6d319832bbbf64aac831fbb974c7d16f26f4a6383b7fdd37589651f916f65d263e0 WHIRLPOOL 7326666cae48cac692708c7015d46ab7eeffa31de112a19bab6c134a8962c3518f8b23d9984ffda2ca5c32e89f6ceedc8af84aa39494ed2cffc7a0303926f264
-MISC ChangeLog 7805 SHA256 b8f5674c7717e9b77e18af031663c353057186f903973e1a1ec735bc7e4266df SHA512 aa78c2d6749623b52c53747c6ea80f3eca2165e18b233e254f925e5600d9ee4dc5900a1e35e14e322765597b40db994f91780f9ed120eef8fc2d3de3a8428a67 WHIRLPOOL 190138f7210f960491196eea56b1a9d61649e2a49ffbe50385b28309ca571ae0029421a29b94f8942810d832cc9a04e97cb81c2879eb6fe8b078ade000629e05
+DIST google-chrome-beta_37.0.2062.68-1_amd64.deb 49404678 SHA256 3e4c4f1c43fa102165aeb253c303ead1f17a6d323fde8aeb19dc2af78108d952 SHA512 786cdf6be6f28a6aca8c1b156a5184ed0897fd0d52da21ed4676a0d4a1915c893337459887f0bd3bf872cd4ee4acb736c61b45ab126b734bb1337a3e007094e1 WHIRLPOOL f0d5bc3e010cf54459f0e0968532dfa30723bef0c97b34580ca23e8e190b68e9473ee7940a3d79884470d65acbf730960f9959b26aa1a216393e03e3fcb5d3ad
+DIST google-chrome-beta_37.0.2062.68-1_i386.deb 49674704 SHA256 cb6c4439a5720b2ea1b8b24e7cb2a7526bd3b846b9b1db2cf75c529fe54755f2 SHA512 d1bce712e29fdf8d3961ed6912539cc9b651400eb612ff86e40e43bac31beb90cdd8e167d68689940e2cc7cd144b46cdcf226c11eb77ffade824dd6b51988c42 WHIRLPOOL 0a972ee8d5e4697a619a49c258737551ee8384e7ab721fc52ab446aefaa876aa0fba25ebb82e1a1d05ad1166b6c8e11359f2af28156e49b2161f98ec28490857
+EBUILD google-chrome-beta-37.0.2062.68_p1.ebuild 4381 SHA256 c99c52c32000dd7f9d05c1c4f1adb448bdaa2787fd7126bdf2c3bcc41850fe6a SHA512 821c92aa59dc0ddffb42f03edca0e868e0ad3905a2d8f9e9b0f68ce06aab1f306a731ac35dbcb78606e5f6bfd43bb46d173f9465d38edcd2c8b0f6e050e08ed5 WHIRLPOOL 2f115ffe391e9937be2521f8a569ed469dab70c19af0992c6d50bdcee5bd16fe4ac5536c79d207d7de7b2caf2502a9d185a528c6cae428ba78980c09a1f3a26d
+MISC ChangeLog 8018 SHA256 9c143319236f36898cdb3c539ee25c8291811e9601266b555c08a0846879bfaf SHA512 d83b6c39f605de4f110201b545bf962439371bc1bf17615fcdb1340d0f8ef6a9ae669d9d366a5ec2070d810354c81bb98cee0a7949f0d98c33f2142ffeb55ad1 WHIRLPOOL 692304ce00ab6f7ef95d7e24b23757ea9c6360f862808c9b0750e72d089812dc7ed7f42d686090ef699416146181686f24a9a6edc9d71f4672bb3d36996b0b44
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlPZqWAACgkQC77qH+pIQ6QefQD9FeRq4+udpCFsXkvhSuJ/xbMu
-FX4JuVYEOsTWsVC7xCsA/2AjK6cIXibVtkbd9Rwdt5naCiPthDSREDLhSOuUPB2M
-=/qJ2
+iF4EAREIAAYFAlPivncACgkQC77qH+pIQ6SZzgEAt+n8+HM3l6bYyJZh6JuNZGYg
+1fm2z54NyFrmNzp4bAkA/iTfqKU7CQIXxqnwDHUbTELuCE1C5wwwdDGIXd4Xf12T
+=jxYI
 -----END PGP SIGNATURE-----
