@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-unstable_38.0.2107.3-1_amd64.deb 47178030 SHA256 30337b7e169f45ed3ffef6531183fd91ed0980b78fc0252fa2ba6d6a913683ef SHA512 7ae9667d1075fe003f7c18f7de916d7b40f68460b425aa9844062bcdb8f50350e93377bbf1dbec9390422daf5a7f8a04d7a66b013be6f3c999c7bf566cbf18d1 WHIRLPOOL 8c5d85b3b5846785c22b7f9d53f3589283e355180fbfce1b37490cdc691bc15be6eb594caebc42edcab540d1b96dc305c0914774c180043988f9035b8f8d1bb1
-DIST google-chrome-unstable_38.0.2107.3-1_i386.deb 46636126 SHA256 9b95811a04fbbff6ec532020f16b1afa942a6aa77c89c331584ce1355edd9b8a SHA512 fdc277d71b52ac3a38900d59adcfa187565849c7cdb1974a25de2d4e42108b6e7e30400d9ab28a92e94616c0ae212bc755e91331b84ba6d0bbe8a89719ab19b1 WHIRLPOOL 103f673e15edd6bd42aa62dfa3a2e74e307c604674500db1ad5a434f36c743ccee40c8abc4079c542a055c63a275873a11ceabff503a9fa746076a806bfc5e5e
-EBUILD google-chrome-unstable-38.0.2107.3_p1.ebuild 4388 SHA256 b4bfb002c68ca9cd6f18251d59ebbdbe171e827d69cef3082054c3bfe000fa72 SHA512 d6314c9c65ca7405f233dd61f547243ee40d02184958bcfaeb772f9d3c890edb96fa005529108b32d362f420e005e24ec40bee08033e842324cf968d8e9a8f70 WHIRLPOOL e19360271fc1d6b89a57bb207d1dfcec803ec8c428b71c0745282545096aa2cb353545f4d196d2526d9663a6a7ba47d22aded3372f2c559b3c2b5bfbf75bfff7
-MISC ChangeLog 10263 SHA256 04dab7aca321f8da3275f6798bda682e9ec383c3da50370994549936d577e14a SHA512 06b61dffb37e14ad3e9b8383a08d72ef94afac4a7b2ae7f38dbfa3fea4010671c335b07fc09d46af1de4b68783f19e26a613a541981b8c56c1a16470bf3d3fd4 WHIRLPOOL 57c04c405b356c8678b8164126287fe93ec4986ba796d3d2d9d7619fb0a928e2ad7bf1450bbc865ec68f1a0d6f8295c62f68fc2d9dfaf6037b4228b968923b23
+DIST google-chrome-unstable_38.0.2114.2-1_amd64.deb 47472462 SHA256 a238d26c8c801b124f7f405ffcd233eb5ab575a7816cd79b56fd11f8c5900098 SHA512 56a5118a1b188df82251bb01654450339d449ffa35e754d5371523f3d0b82e4683013aeeea5435415a12dbdf7f046dc2f56b3e020c756bc3473b80e095083c57 WHIRLPOOL 67c35c9f1689110c55421d7025f11d2dc280693ecbd6f4370193ce2618c4f760a3347486b6bada468ee6a7847f521abea37fc79324d3611f074c5b605f0b01ae
+DIST google-chrome-unstable_38.0.2114.2-1_i386.deb 46912814 SHA256 c31f51c9fec379d7828d9fe10f351ce460b511613c28ca15bec7b2c79e3894e3 SHA512 7f96ed66734758f390e30b7cbf6d0231d02a996a29b52034613219ab2124f28ca0dbe33287ab7aa678cc2343f2f4a2b6de083193a07124d226bde39e3934ea60 WHIRLPOOL 890e2d52e15913da2790acd485e3b0ebdef3d23fb9fa81e0a0e401cf89ad7df986d771d163efbad6bc0bf3ff01598ba02edc01a0306e440eb35b747be9bea00d
+EBUILD google-chrome-unstable-38.0.2114.2_p1.ebuild 4388 SHA256 a5988fc1bc39a06fa25e198494afebbeba856f6cad67d36e6ac0e805a9927414 SHA512 628e990df73b5c18c0898eee715ea4dfac52d3405d3ca5f7e9ac67e0e9afa212043450440ba8fa0d769c8fe97517cf6d136e85d9af419759122d74fa966b0548 WHIRLPOOL 5b63982d85b30c1e4cbde7035d60aa0263f972ed84d0464927b6409636f2afe231bb1b35d1e2f4f49528d2b8c6febcbd1013d4a3cc645db28d3f2e12f4a24c3b
+MISC ChangeLog 10485 SHA256 462eaaaf90a48213534f93f81382bdc6b960665f806dbe1184d3ad006f3c2fdf SHA512 3b1aa8ea13e5142906831574f514d356c50e1104302e51f9d0af9bdb57de46d31b6162e14a5355151456568f85fc9a1432e2cc105ace1c27efd0f6f22624c2c6 WHIRLPOOL d6eefb2c426d4b0034a6dcdffe669b95d13f019a51bfe54c9f3e11b2184cba7a0c388392acf88908e3f545d031e94a9b4944889241778f098f2fd5a8ee6229a4
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlPddBcACgkQC77qH+pIQ6TuJgEAw1eUq9jvANpP80AZN/9Dx89x
-L4SD0PJDfBHwGPeJVTIBALwA9M/8K/qSXRfRAkq3ptiEksHcW3OAUJ6yqZuVUeBA
-=oiv0
+iF4EAREIAAYFAlPivr8ACgkQC77qH+pIQ6RnkQEAnRERqw5p8DFn4wS/eVl/IBvG
+vM9hJRhUSzTxwN1PFlQA/3h4UOr4VFrr/+iQZeq6TovL7jyG0T+SLQu/IOy+4HOG
+=B4mw
 -----END PGP SIGNATURE-----
