@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-beta/google-chrome-beta-37.0.2062.58_p1.ebuild,v 1.1 2014/07/31 02:26:39 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-unstable/google-chrome-unstable-38.0.2114.2_p1.ebuild,v 1.1 2014/08/06 23:48:14 floppym Exp $
 
 EAPI="5"
 
