@@ -1,22 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-beta_37.0.2062.58-1_amd64.deb 49390786 SHA256 d1f1ebde2baa2370a2f0c649398d99d16dce96a3c8bfd928bd51167b130aeb32 SHA512 8fa04d69aa09f935e8aa14a6ffd4ada8b88a81dff382a091245547d5a14fd0be0e9abd1e317e7bf9d4ab3ee4b5d05bcb7822178f87e5da4fc822f781f14ab210 WHIRLPOOL 63879c3ce69ab28fb9639a0efb62bf4017e33b9d10534d4f228d9b6b180f4ae21292651223072bbea86d88c74a572cf248f9868f0cc85ed28943a06f671c5376
-DIST google-chrome-beta_37.0.2062.58-1_i386.deb 49941168 SHA256 f32d89c431379131ea90652993146be2c41058bbc9bebc60dbcf188f17caa1b2 SHA512 0681dd66646695e0dca92a59c49d9773a4c306be62b98ad6f2b7f353eeaaf1584edf05324077c442657196e481a915cea600bd985f3668844f437551b7524beb WHIRLPOOL 3f2bd25a592da99106e91ee68531f49888e0df9eccd97e0fd5840410594a11afcf3dba204f2df928b26fe2e4de3691e5d651df257c88ead3edc329b2e4e0dbdc
+DIST google-chrome-beta_37.0.2062.68-1_amd64.deb 49404678 SHA256 3e4c4f1c43fa102165aeb253c303ead1f17a6d323fde8aeb19dc2af78108d952 SHA512 786cdf6be6f28a6aca8c1b156a5184ed0897fd0d52da21ed4676a0d4a1915c893337459887f0bd3bf872cd4ee4acb736c61b45ab126b734bb1337a3e007094e1 WHIRLPOOL f0d5bc3e010cf54459f0e0968532dfa30723bef0c97b34580ca23e8e190b68e9473ee7940a3d79884470d65acbf730960f9959b26aa1a216393e03e3fcb5d3ad
+DIST google-chrome-beta_37.0.2062.68-1_i386.deb 49674704 SHA256 cb6c4439a5720b2ea1b8b24e7cb2a7526bd3b846b9b1db2cf75c529fe54755f2 SHA512 d1bce712e29fdf8d3961ed6912539cc9b651400eb612ff86e40e43bac31beb90cdd8e167d68689940e2cc7cd144b46cdcf226c11eb77ffade824dd6b51988c42 WHIRLPOOL 0a972ee8d5e4697a619a49c258737551ee8384e7ab721fc52ab446aefaa876aa0fba25ebb82e1a1d05ad1166b6c8e11359f2af28156e49b2161f98ec28490857
 DIST google-chrome-stable_36.0.1985.125-1_amd64.deb 48386260 SHA256 ec5e14bf047a550126dd511f0d912eb96a366a89582534387a89a2c64c18a563 SHA512 a26571fb10631c4bb99133e613abf289e5f52534646eca45dff122beb6e7610228887f014290516a162a4cd69a1170844b41d062efaebe579c5bc37f129bfc89 WHIRLPOOL 768bd25cb6d778f2d2122578cd0c348f453f9c03f61bb042b847e977f80e75bf4fea451749d938ca9829346e49c74068ff347a5b0bf1114b2a305b1e73030be5
 DIST google-chrome-stable_36.0.1985.125-1_i386.deb 48771710 SHA256 03bc2ff19fedff54595af943803bdb00aee6abe69f06fa98ed478469caff0aaa SHA512 a784d3ebe2eee57994731da0b88458e00720e67a0ab24f1a34bb1b2fef489959d91f358a18662ea72a7ca399cb29aee40d8c71b34cb6103c7ec3a152e09cc2d1 WHIRLPOOL 646a6e0a3e611df00acc02b5cbd33cb8241340d5b386ae24acead069ae86a8313c6cd17f5c51501e8e9f1add8dd622e31c40176caf9bfa68b7afc86d50c1c3f8
-DIST google-chrome-unstable_38.0.2107.3-1_amd64.deb 47178030 SHA256 30337b7e169f45ed3ffef6531183fd91ed0980b78fc0252fa2ba6d6a913683ef SHA512 7ae9667d1075fe003f7c18f7de916d7b40f68460b425aa9844062bcdb8f50350e93377bbf1dbec9390422daf5a7f8a04d7a66b013be6f3c999c7bf566cbf18d1 WHIRLPOOL 8c5d85b3b5846785c22b7f9d53f3589283e355180fbfce1b37490cdc691bc15be6eb594caebc42edcab540d1b96dc305c0914774c180043988f9035b8f8d1bb1
-DIST google-chrome-unstable_38.0.2107.3-1_i386.deb 46636126 SHA256 9b95811a04fbbff6ec532020f16b1afa942a6aa77c89c331584ce1355edd9b8a SHA512 fdc277d71b52ac3a38900d59adcfa187565849c7cdb1974a25de2d4e42108b6e7e30400d9ab28a92e94616c0ae212bc755e91331b84ba6d0bbe8a89719ab19b1 WHIRLPOOL 103f673e15edd6bd42aa62dfa3a2e74e307c604674500db1ad5a434f36c743ccee40c8abc4079c542a055c63a275873a11ceabff503a9fa746076a806bfc5e5e
+DIST google-chrome-unstable_38.0.2114.2-1_amd64.deb 47472462 SHA256 a238d26c8c801b124f7f405ffcd233eb5ab575a7816cd79b56fd11f8c5900098 SHA512 56a5118a1b188df82251bb01654450339d449ffa35e754d5371523f3d0b82e4683013aeeea5435415a12dbdf7f046dc2f56b3e020c756bc3473b80e095083c57 WHIRLPOOL 67c35c9f1689110c55421d7025f11d2dc280693ecbd6f4370193ce2618c4f760a3347486b6bada468ee6a7847f521abea37fc79324d3611f074c5b605f0b01ae
+DIST google-chrome-unstable_38.0.2114.2-1_i386.deb 46912814 SHA256 c31f51c9fec379d7828d9fe10f351ce460b511613c28ca15bec7b2c79e3894e3 SHA512 7f96ed66734758f390e30b7cbf6d0231d02a996a29b52034613219ab2124f28ca0dbe33287ab7aa678cc2343f2f4a2b6de083193a07124d226bde39e3934ea60 WHIRLPOOL 890e2d52e15913da2790acd485e3b0ebdef3d23fb9fa81e0a0e401cf89ad7df986d771d163efbad6bc0bf3ff01598ba02edc01a0306e440eb35b747be9bea00d
 EBUILD chrome-binary-plugins-36.0.1985.125_p1.ebuild 1974 SHA256 78cd4dceb5b749b886a5acdc5cd2fa4e236e2de725c422ff773d28960f6dcac4 SHA512 585a13d092c93fcbd74bc39b15e893e3be54538d976c1ef18210a98dfa3d0b32beb582b8540e06d654a763a42609b5123d7ec604e9d4fa18568a812aad5415e8 WHIRLPOOL 775d4c442b97f4ff76dedc63865aa5919e1e69e5682a90f67ff6851daa7fcd55aa13182fbb7df6200aee9d276b32ce08739f0233432b4e23456a35066922b0c5
-EBUILD chrome-binary-plugins-37.0.2062.58_beta1.ebuild 1950 SHA256 e15e500cef5a18e6646db8292a71ec4b960084ad0f46ebff1f6a3fc1c5c472b8 SHA512 07d9bfb4198044fe7c2863ee8135d7d1f090efbc379249f67ce537c4f057d0fdebc8128bc8d118465e8a778630a0d2d6cb2fb0529207bed94565be7390b54daa WHIRLPOOL 7b0345c1fbd99de5e2ca500533f97bd73766bce5466ea457bbec2ad0766c5e17395e2d94858b1c6cbb6a8112fa5d49c8b2ec901761685bf976af3898a1a50ac2
-EBUILD chrome-binary-plugins-38.0.2107.3_alpha1.ebuild 1950 SHA256 a01d93e7fc7e51b704b7733ee5d6a52b4ae2592794be2f3f58654b26aaabbd2b SHA512 db8205aedefe930171b9c0206bde98f4a86e7036ed47c575970d5ad5b0d1bfcf004bc09ff9a3a4925aaf0b9fc5ee3e456027b6722b0fe2b152cb005d3c06283e WHIRLPOOL 0e3f46b1adb0cc088c66bf3297b7627c8683eac68c5cba958eb02ab39e194bf44a0dd1fe808ede507a55c8b77e6cd93be3d2a1568e95d4f7b61ed4fd142ba581
+EBUILD chrome-binary-plugins-37.0.2062.68_beta1.ebuild 1950 SHA256 9dc77f511654a3c69447e5e9675310af40b61516ae818ab27288255fc81ee554 SHA512 9ed2dbd4cbb9550dc953d1a2c43448921956ae625866e7b3f3eaef15f6a19b22d3f3e2e570da9d67b2a79ba0163888785ced5fb147f189165e69963e904cd017 WHIRLPOOL 4e0ea5141b1c0b0133f5378ba94cb1312fa83d7b7a07f43b3ec431b4381709e6ce8a083f77323dfb6a9d951da5f49676aa1833d9618bbd22e03f82e04836230c
+EBUILD chrome-binary-plugins-38.0.2114.2_alpha1.ebuild 1950 SHA256 b519e8440d09e518aab6f43d93d49e2ed6b737fd25784ad27ca90e73d4d7945a SHA512 01de72be41dee14845f4ee84c99b64b1d57caa6adc5e0efd938321161afe37b8b6b77b30e3ca7758798cc7e08b71a78c82ef233a04c1997147fc4271407c92e4 WHIRLPOOL 62bea0b49bfed02e5c6913e4f6112cefd36fa6a24a40cec9549ee2c518ed3d6605ffc5d04d90572903e8a3081a50180fbc2240b879e1e1eb2d2afb73cc9919dd
 EBUILD chrome-binary-plugins-9999.ebuild 1886 SHA256 b6519f2f974862d1bb5a0ec3618478dd39e03d7d3524d0c9ec913aa03330f369 SHA512 8b5dd19ec18cf1a7bd949d6f2aea22931aab2714945c91e48cd1e6d6425ffcca734a744a6a302fd9440082152c116c6f8ae7f6950424eff7d86159413a5d8406 WHIRLPOOL 6743d7c58fce7428232161bca86f360c5987f360f4db7c127a195214ea50fd1d0cf0052b3903391301d07165ddf6ccb4cc33e151b0cb37367ddeacf5bb7ab014
-MISC ChangeLog 45327 SHA256 750bd948c496c8d44f83a2529f842d40e660a35fe192d8e144ca225439c9accc SHA512 7e834fcf90b0cd7ffb67e8ee0960fd36d97e9d95d65ec367acc706762a135ed339daca81d31fa1079ff8094fa40dc8e3622d135f7c298ea15c21dcb6d577e347 WHIRLPOOL 240f680a3da9d25b31db6b2fe581c3a6bc574d395891f6ed0631a532aab446587890287a1c965a3e723575b3cbb084443b6284973be3c8674b1c6ef5e682030a
+MISC ChangeLog 45718 SHA256 e867ae61a4efb31b639dc5e8f82eeb6c9ba8f853db707920cf10c6bcabdf3264 SHA512 7d7ccb78e8ffaa6a0c962117e53da03af751d372be8a3247a72dfd5d55a95af643acbd774094297eb70980877e0e8ef436b51af9f4c3b7418b972f3583546ab1 WHIRLPOOL 9d5c2d8b814f62a09478cdcc58b32d6faec8d92db639239e5107b745799c0e9ea06d62fb7c98e847517329bb0d386d290e530375efac6ec6da82c40cdf401d7a
 MISC metadata.xml 409 SHA256 d40d69b26dd8aefe8da69937e54e0a885d6867e28e42c5dcbe193233a84ee533 SHA512 bdf4f11c173af9f80b3475f8ea32ba966806d1e0e694bd55a6a4960717e3f3ffff69eabb060ae5ee4d3b39cdf18eeeff45c9d431c3b6ce8ae5c271c7a409aa71 WHIRLPOOL 7319320d648a8aae0eec726a8ab489bb71fe5f93dfb40847e97344a02be85a09ba931d5aeee8fdb13d899de3c90746c75a59897287c715dd771dfbe8863b803b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF0EAREIAAYFAlPddCcACgkQC77qH+pIQ6R+CwD+P/YSS7G9j1aNqN+MrF0yG6qf
-t4bWOBCZCtpDBX+973gA+N+t/ytVxByztF+WgAzRhps8kzboF15DYnpVGjAeShs=
-=rPOY
+iF4EAREIAAYFAlPivrEACgkQC77qH+pIQ6TVbAEAqj4ux4dErjiiS9c0hbMQXR2Y
+K9t+R7zOXnGT3/WSH3MBAMhWyRkwLLPfpb4/jppC5i72+8ZEGqJpqp9TPEC5foqu
+=B3xx
 -----END PGP SIGNATURE-----
