@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/chrome-binary-plugins-38.0.2107.3_alpha1.ebuild,v 1.1 2014/08/02 23:28:37 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/chrome-binary-plugins-37.0.2062.68_beta1.ebuild,v 1.1 2014/08/06 23:48:00 floppym Exp $
 
 EAPI=4
 
