@@ -1,6 +1,13 @@
 # ChangeLog for www-client/google-chrome-unstable
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-unstable/ChangeLog,v 1.48 2014/08/02 23:28:17 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-unstable/ChangeLog,v 1.49 2014/08/06 23:48:14 floppym Exp $
+
+*google-chrome-unstable-38.0.2114.2_p1 (06 Aug 2014)
+
+  06 Aug 2014; Mike Gilbert <floppym@gentoo.org>
+  +google-chrome-unstable-38.0.2114.2_p1.ebuild,
+  -google-chrome-unstable-38.0.2107.3_p1.ebuild:
+  Automated update.
 
 *google-chrome-unstable-38.0.2107.3_p1 (02 Aug 2014)
 
